2007-07-23  Claude Paroz <claude@2xlibre.net>

	* update-stats.py: Domain corresponds to potbase for doc type.

2007-07-20  Danilo Šegan  <danilo@gnome.org>

	* translation-teams.xml.in: Fix Serbian team name.

	* dispatcher.py: Export ngettext call.

	* templates/list-languages.tmpl: Use ngettext where needed.

	* templates/header.tmpl: Fix webroot usage.

2007-07-20  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Added ekiga maintainer reference.
	* people.xml.in: Added dsandras.

2007-07-19  Claude Paroz  <claude@2xlibre.net>

	* templates/header.tmpl: Modified import to prevent namespace
	conflicts (language).

2007-07-16  Claude Paroz  <claude@2xlibre.net>

	* templates/index.tmpl: Removed garbage comments.

2007-07-16  Claude Paroz  <claude@2xlibre.net>

	* data/main.css: Added footnote class style.
	* templates/index.tmpl: Added translator-credits in footnote.
	Fixes bug #455991.

2007-07-15  Claude Paroz  <claude@2xlibre.net>

	* data/main.css:
	* data/gnome-64.png:
	* templates/footer.tmpl:
	* templates/header.tmpl:
	* templates/index.tmpl:
	* templates/language-release.tmpl:
	* templates/list-languages.tmpl:
	* templates/list-modules.tmpl:
	* templates/list-releases.tmpl:
	* templates/list-teams.tmpl:
	* templates/module.tmpl:
	* templates/people.tmpl:
	* templates/person.tmpl:
	* templates/release.tmpl:
	* templates/team.tmpl: Added header and footer for easier
	customization. Changed appearance based on GNOME Bugzilla.
	Fixed xml language property (bug #428015).

2007-07-11  Claude Paroz <claude@2xlibre.net>

	* translation-teams.xml.in: Corrected typo.

2007-07-11  Claude Paroz <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* people.xml.in:
	* releases.xml.in:
	* templates/index.tmpl:
	* templates/list-languages.tmpl:
	* templates/people.tmpl:
	* update-stats.py:
	* view-module.py: Make GNOME uppercase.

2007-07-11  Claude Paroz  <claude@2xlibre.net>

	* teams.py:
	* templates/language-release.tmpl:
	* templates/list-teams.tmpl: