@@ -372,7 +372,12 @@
   <!-- el translation coordinator -->
   <person id="simos">
     <name>Simos Xenitellis</name>
-    <email>simos74@gmx.net</email>
+    <email>simos@gnome.org</email>
+    <nick>simos</nick>
+    <cvs-account>simos</cvs-account>
+    <webpage>http://www.gnome.gr</webpage>
+    <icon>http://planet.ellak.gr/heads/simosgnome.png</icon>
+    <bugzilla-account>simos.bugzilla@gmail.com</bugzilla-account>
   </person>
   <!-- gn translation coordinator -->
   <person id="x-morenosaraivamartins">
