@@ -1,3 +1,7 @@
+2007-07-25  Simos Xenitellis  <simos@gnome.org>
+
+	* pepople.xml.in: Added fields to "simos".
+
 2007-07-23  Claude Paroz <claude@2xlibre.net>
 
 	* update-stats.py: Domain corresponds to potbase for doc type.
